@@ -80,7 +80,9 @@
 				     :line-style :solid))
 	   (result-string default)
 	   (pos (length default))
-	   (local-history history))
+	   (local-history history)
+	   (grab-keyboard-p (xgrab-keyboard-p))
+	   (grab-pointer-p (xgrab-pointer-p)))
       (labels ((add-cursor (string)
 		 (concatenate 'string (subseq string 0 pos) "|" (subseq string pos)))
 	       (print-string ()
@@ -168,6 +170,9 @@
 		   (:exposure (print-string)))
 		 t))
 	(xgrab-pointer *root* 92 93)
+	(unless grab-keyboard-p
+	  (ungrab-main-keys)
+	  (xgrab-keyboard *root*))
 	(xlib:map-window window)
 	(print-string)
 	(wait-no-key-or-button-press)
@@ -177,7 +182,11 @@
 		  (xlib:process-event *display* :handler #'handle-query))
 	  (xlib:destroy-window window)
 	  (xlib:close-font font)
-	  (xgrab-pointer *root* 66 67)))
+	  (xungrab-keyboard)
+	  (grab-main-keys)
+	  (if grab-pointer-p
+	      (xgrab-pointer *root* 66 67)
+	      (xungrab-pointer))))
       (values (when (member done '(:Return :Complet))
 		(push result-string history)
 		result-string)
